# py

./: .gitignore  .travis.yml  CLAUDE.md  pyproject.toml  requirements.txt  setup_venv.sh
Autocode/src/model/: FileItem.py  FileItemModel.py  Plugin.py
Autocode/src/runtime/: Runtime.py
Autocode/src/ui/: AutocodeApp.py  AutocodeUtils.py  Panels.py  test.py
Autocode/tests/model/: UTFileItem.py
DupliKate/: ImageDuplicateFinderDialog.py  ImageHash.py  hashing_benchmarks.py  readme.md
Duplo/: DuploApp.py
FileWrangler/: FileWranglerApp.py  FileWranglerCore.py  README.md  UIComponents.py  __init__.py  test_FileWrangler.py
FileWrangler/fileops/: CompletelyReplace.py  PathComponents.py  PatternFinding.py  Separator.py
FileWrangler/test__Separator/: test_FileWrangler.py  test__CompletelyReplace.py  test__PathComponents.py  test__PatternFinding.py  test__Separator.py
Imageplay/: ImagePlayApp.py  ImageView.py  PlayList.py  __init__.py  app_requirements.md  readme.md
Imageplay/core/: Playlist.py
Imageplay/model/: FileItemModel.py
Imageplay/src/: ControlBar.py  ImageDetails.py  ImageDuplicateFinderDialog.py  ImagePlayApp.py  ImageView.py  PlayList.py  Settings.py  SettingsDialog.py
Imageplay/src/actions/: BaseEditAction.py  Crop.py  __init__.py
Imageplay/src/model/: Actions.py  Animation.py  DuplicateImageDisplay.py  FileItemModel.py  History.py  PlaylistFileModel.py  ThumbnailGrid.py
Imageplay/src/runtime/: ImageHash.py
Imageplay/tests/: TestBoundedLRUQueue.py  TestCircularLRUQueue.py  TestInfiniteHistoryStack.py  test_Playlist.py
Imageplay/ui/: Actions.py  Image.py  Settings.py
MediaLib/: MediaLibApp.py  __init__.py  media_lib_template.sqlite  readme.md  tag_analysis.xlsx
MediaLib/resource/db/: media_lib_template.sqlite
MediaLib/ui/: LibraryActions.py  LibraryManager.py  LibraryManagerPanel.py  LibraryManagerPanels.py  TaskManagement.py
RedditBrowser/: __init__.py
RoboGui/: CustomUI.py  README.md  RoboGui.py  RobocopySwitchDictionary.py  RobocopySwitches.py
RoboGui/src/: CustomUI.py  RoboGui.py  Utils.py
RoboGui/test/: TestRoboGui.py
TransCoda/: Encoda.py  MainPanel.py  MediaMetaData.py  ProcessRunners.py  TransCodaApp.py  TransCodaEditor.py  TransCodaHistory.py  TransCodaSettings.py  __init__.py  readme.md  run.sh
TransCoda/core/: Encoda.py  MetaDataOperations.py  ProcessRunners.py  TransCodaHistory.py
TransCoda/resource/: about.html  encoders.json
TransCoda/tests/: test_TransCodaHistory.py
TransCoda/ui/: Actions.py  File.py  MainPanel.py  TerminalView.py  Theme.py  TransCodaEditor.py  TransCodaSettings.py
bing/: bing-downloader.py
common/: CommonUtils.py  CustomUI.py  MediaMetaData.py  TestCustomUI.py  Theme.py  __init__.py
wallpaper-finder/: find-wallpapers.py
