[project]
name = "py-desktop-apps"
version = "0.1.0"
description = "A collection of PyQt5-based desktop applications"
readme = "readme.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "ag-sd" }
]
keywords = ["pyqt5", "desktop", "gui", "media", "transcoding", "image-processing"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: X11 Applications :: Qt",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Sound/Audio :: Conversion",
    "Topic :: Multimedia :: Video :: Conversion",
]

dependencies = [
    "PyQt5>=5.15.0",
    "Pillow>=10.0.0",
    "mutagen>=1.47.0",
    "requests>=2.31.0",
    "psutil>=5.9.0",
]

[project.optional-dependencies]
# DupliKate - duplicate image finder
duplikate = [
    "imagehash>=4.3.0",
]

# RedditBrowser
reddit = [
    "praw>=7.7.0",
    "beautifulsoup4>=4.12.0",
]

# Video downloading support
video = [
    "yt-dlp>=2024.1.0",
]

# All optional dependencies
all = [
    "imagehash>=4.3.0",
    "praw>=7.7.0",
    "beautifulsoup4>=4.12.0",
    "yt-dlp>=2024.1.0",
]

# Development dependencies
dev = [
    "pytest>=8.0.0",
    "pytest-qt>=4.4.0",
    "ruff>=0.3.0",
    "mypy>=1.8.0",
]

[project.urls]
Homepage = "https://github.com/ag-sd/py"
Repository = "https://github.com/ag-sd/py"
Issues = "https://github.com/ag-sd/py/issues"

[project.scripts]
transcoda = "TransCoda.TransCodaApp:main"
filewrangler = "FileWrangler.FileWranglerApp:main"
duplikate = "DupliKate.ImageDuplicateFinderDialog:main"
imageplay = "Imageplay.ImageplayApp:main"

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = [
    "common*",
    "Autocode*",
    "DupliKate*",
    "Duplo*",
    "FileWrangler*",
    "Imageplay*",
    "RedditBrowser*",
    "RoboGui*",
    "TransCoda*",
    "bing*",
    "wallpaper-finder*",
]

[tool.pytest.ini_options]
testpaths = [
    "Autocode/tests",
    "FileWrangler/test__Separator",
    "Imageplay/tests",
    "TransCoda/tests",
    "RoboGui/test",
    "common",
]
python_files = ["test_*.py", "Test*.py", "UT*.py"]
python_classes = ["Test*", "UT*"]
python_functions = ["test_*"]

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # do not perform function calls in argument defaults
]

[tool.ruff.lint.isort]
known-first-party = ["common"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
